# Global-Price-Index

./: README.md
global_price_index/: .env  .eslintrc.js  Cargo.toml  Makefile  README.md  config.toml  jest.config.js  package.json  tsconfig.json
global_price_index/.cargo/: config.toml
global_price_index/docs/: global_price_ex.md
global_price_index/frontend/: package.json  tsconfig.json
global_price_index/frontend/static/js/: app.ts
global_price_index/src/: api.rs  config.rs  error.rs  lib.rs  main.rs  models.rs
global_price_index/src/exchanges/: binance.rs  huobi.rs  kraken.rs  mod.rs
global_price_index/static/css/: styles.css
global_price_index/static/js/: app.ts
global_price_index/templates/: index.html
global_price_index/tests/: api_tests.rs  exchange_tests.rs  global_price_index_tests.rs  property_tests.proptest-regressions  property_tests.rs  websocket_tests.rs
