[package]
name = "global_price_index"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
actix-web = "4.4.1"
actix-files = "0.6.2"
futures = "0.3.30"
thiserror = "1.0.57"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
async-trait = "0.1.77"
config = "0.13.4"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-test = "0.4.3"
mockall = "0.12.1"
wiremock = "0.5.22"
proptest = "1.4"
test-log = "0.2.14"
env_logger = "0.11.1"